@@ -15,6 +15,24 @@ class FilterTest < Test::Unit::TestCase
       end
   end
   
+  class LimitedFilterController < ActionController::Base
+    before_filter :ensure_login, :for => :show
+
+    def show
+      render_text "ran action"
+    end
+
+    def show_without_filter
+      render_text "ran action without filter"
+    end
+
+    private
+      def ensure_login
+        @ran_filter ||= []
+        @ran_filter << "ensure_login"
+      end
+  end
+  
   class PrependingController < TestController
     prepend_before_filter :wonderful_life
 
@@ -125,6 +143,11 @@ class FilterTest < Test::Unit::TestCase
   def test_running_filters_with_class
     assert test_process(AuditController).template.assigns["was_audited"]
   end
+
+  def test_running_limited_filters
+    assert_equal %w( fire_flash ensure_login ), test_process(LimitedFilterController, "show").template.assigns["ran_filter"]
+    assert_equal %w( fire_flash ), test_process(LimitedFilterController, "show_without_filter").template.assigns["ran_filter"]
+  end
   
   def test_bad_filter
     assert_raises(ActionController::ActionControllerError) { 
@@ -151,9 +174,9 @@ class FilterTest < Test::Unit::TestCase
   end
 
   private
-    def test_process(controller)
+    def test_process(controller, action = "show")
       request = ActionController::TestRequest.new
-      request.action = "show"
+      request.action = action
       controller.process(request, ActionController::TestResponse.new)
     end
 end
