@@ -1,3 +1,8 @@
+*SVN*
+
+* Added the possibility of passing nil to UrlHelper#link_to to use the link itself as the name
+
+
 *1.2.0* (January 4th, 2005)
 
 * Added MemCacheStore for storing session data in Danga's MemCache system [Bob Cottrell]
